ecmascript/parser/tests/test262-error-references/fail/05b898d7ef3c0300.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/05b898d7ef3c0300.js:1:4
  |
1 | 0b1a
  |    ^

